# cen5035-optiflow-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: database.py  main.py  migrate_products.py  models.py
app/auth/: router.py  service.py
app/calendar/: router.py
app/orders/: models.py  router.py  service.py
app/products/: models.py  router.py  service.py
app/reporting/: router.py
app/routers/: calendar_router.py  orders_router.py  reporting_router.py  vendors_router.py
app/users/: models.py  router.py  service.py
app/vendors/: models.py  router.py
routes/: products.py
services/: product_service.py
