[project]
name = "cen5035-optiflow-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.1",
    "python-decouple>=3.8",
    "reportlab>=4.4.5",
]
